--- a/pom.xml
+++ b/pom.xml
@@ -24,9 +24,6 @@
   <packaging>pom</packaging>
 
   <name>com.worthto</name>
-  <modules>
-    <module>../generator</module>
-  </modules>
   <groupId>com.worthto</groupId>
   <artifactId>warehouse</artifactId>
   <version>1.0-SNAPSHOT</version>
@@ -46,6 +43,15 @@
           </connectors>
           <webAppSourceDirectory>${project.build.directory}/${pom.artifactId}-${pom.version}</webAppSourceDirectory>
           <contextPath>/</contextPath>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.mybatis.generator</groupId>
+        <artifactId>mybatis-generator-maven-plugin</artifactId>
+        <version>1.3.2</version>
+        <configuration>
+          <verbose>true</verbose>
+          <overwrite>true</overwrite>
         </configuration>
       </plugin>
 
