--- a/pom.xml
+++ b/pom.xml
@@ -28,48 +28,28 @@
   <artifactId>warehouse</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.mortbay.jetty</groupId>
-        <artifactId>maven-jetty-plugin</artifactId>
-        <version>6.1.7</version>
-        <configuration>
-          <connectors>
-            <connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
-              <port>8888</port>
-              <maxIdleTime>30000</maxIdleTime>
-            </connector>
-          </connectors>
-          <webAppSourceDirectory>${project.build.directory}/${pom.artifactId}-${pom.version}</webAppSourceDirectory>
-          <contextPath>/</contextPath>
-        </configuration>
-      </plugin>
-
-    </plugins>
-  </build>
-
   <properties>
-    <log4j.version>1.2.17</log4j.version>
-    <gson.version>2.8.0</gson.version>
-    <junit.version>4.12</junit.version>
-    <javax.servlet.version>3.1.0</javax.servlet.version>
-    <javax.servlet.jsp.version>2.2</javax.servlet.jsp.version>
-    <spring.version>4.3.6.RELEASE</spring.version>
-    <freemarker.version>2.3.23</freemarker.version>
-    <hamcrest-core.version>1.3</hamcrest-core.version>
-    <classmate.version>1.3.1</classmate.version>
-    <jboss-logging.version>3.3.0.Final</jboss-logging.version>
-    <javax.validation.version>1.1.0.Final</javax.validation.version>
-    <hibernate-validator.version>5.4.0.Final</hibernate-validator.version>
-    <jedis.version>2.9.0</jedis.version>
-    <org.apache.commons.commons-pool2.version>2.4.2</org.apache.commons.commons-pool2.version>
-    <commons-lang.version>2.6</commons-lang.version>
-    <mysql-connector-java.version>6.0.4</mysql-connector-java.version>
-    <mybatis.version>3.4.2</mybatis.version>
-    <org.aspectj-version>1.8.9</org.aspectj-version>
-    <org.slf4j-version>1.7.5</org.slf4j-version>
-    <avalon-framework.version>4.1.4</avalon-framework.version>
+      <log4j.version>1.2.17</log4j.version>
+      <gson.version>2.8.0</gson.version>
+      <junit.version>4.12</junit.version>
+      <javax.servlet.version>3.1.0</javax.servlet.version>
+      <javax.servlet.jsp.version>2.2</javax.servlet.jsp.version>
+      <spring.version>4.3.6.RELEASE</spring.version>
+      <freemarker.version>2.3.23</freemarker.version>
+      <hamcrest-core.version>1.3</hamcrest-core.version>
+      <classmate.version>1.3.1</classmate.version>
+      <jboss-logging.version>3.3.0.Final</jboss-logging.version>
+      <javax.validation.version>1.1.0.Final</javax.validation.version>
+      <hibernate-validator.version>5.4.0.Final</hibernate-validator.version>
+      <jedis.version>2.9.0</jedis.version>
+      <org.apache.commons.commons-pool2.version>2.4.2</org.apache.commons.commons-pool2.version>
+      <commons-lang.version>2.6</commons-lang.version>
+      <mysql-connector-java.version>6.0.4</mysql-connector-java.version>
+      <mybatis.version>3.4.2</mybatis.version>
+      <org.aspectj-version>1.8.9</org.aspectj-version>
+      <org.slf4j-version>1.7.5</org.slf4j-version>
+      <avalon-framework.version>4.1.4</avalon-framework.version>
+      <finalName>warehouse</finalName>
   </properties>
 
   <dependencies>
@@ -337,5 +317,30 @@
 
 
   </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <encoding>utf-8</encoding>
+                </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>2.2</version>
+                <configuration>
+                    <encoding>utf-8</encoding>
+                </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-clean-plugin</artifactId>
+                <version>2.2</version>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
