--- a/src/main/resources/config/jdbc.properties
+++ b/src/main/resources/config/jdbc.properties
@@ -6,9 +6,9 @@
 
 # mysql
 read.driver=com.mysql.jdbc.Driver
-read.url=jdbc:mysql://127.0.0.1:3306/warehouse?characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true&allowMultiQueries=true
+read.url=jdbc:mysql://localhost:3306/warehouse?characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true&allowMultiQueries=true
 read.user=root
-read.password=root
+read.password=wjsw546
 #最大连接数量
 read.maxActive=100
 read.maxIdle=50
