--- a/pom.xml
+++ b/pom.xml
@@ -319,6 +319,12 @@
   </dependencies>
 
     <build>
+      <testResources>
+        <testResource>
+          <directory>src/test/resources</directory>
+          <filtering>false</filtering>
+        </testResource>
+      </testResources>
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
